--- a/index.html
+++ b/index.html
@@ -1,1 +1,297 @@
 
+
+
+
+
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600&display=swap" rel="stylesheet">
+<style>
+
+  *{
+  font-family: 'Mulish', sans-serif;
+}
+
+.fractions {
+    padding: 40px 0;
+    background-color: #f9f9f9;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    border-radius:
+}
+
+th, td {
+    padding: 12px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #4CAF50; 
+    color: white; /* White text for header */
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2; /* Zebra striping for rows */
+}
+
+tr:hover {
+    background-color: #ddd; /* Highlight on hover */
+}
+.fractions {
+    padding: 40px 20px;
+    background-color: white;
+    overflow-x: auto; /* Enable horizontal scrolling on small screens */
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+ 
+}
+
+th, td {
+    padding: 12px;
+    text-align: center;
+    border: 1px solid #f1c40f;
+    
+}
+
+th {
+    background-color: orange; /* Green background for header */
+    color: white; 
+    position: sticky; /* Make the header sticky */
+    top: 0; /* Stick to the top of the table */
+    z-index: 10; /* Ensure it stays above other content */
+}
+
+tr:nth-child(even) {
+    background-color: white; /* Zebra striping for rows */
+}
+
+tr:hover {
+    background-color: #f1c40f; /* Highlight on hover */
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+    th, td {
+        padding: 10px;
+    }
+
+    th {
+        font-size: 14px; /* Smaller font size for header */
+    }
+
+    td {
+        font-size: 12px; /* Smaller font size for table data */
+    }
+}
+</style>
+
+
+
+
+
+
+<section id="fractions" class="fractions">
+    <div class="container">
+        <h2>Table:</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Fraction</th>
+                    <th>Percentage</th>
+                    <th>Mixture</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1/1</td>
+                    <td>100%</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>1/2</td>
+                    <td>50%</td>
+                    <td>1/2</td>
+                </tr>
+                <tr>
+                    <td>1/3</td>
+                    <td>33.33%</td>
+                    <td>1⅓</td>
+                </tr>
+                <tr>
+                    <td>1/4</td>
+                    <td>25%</td>
+                    <td>1/4</td>
+                </tr>
+                <tr>
+                    <td>1/5</td>
+                    <td>20%</td>
+                    <td>1/5</td>
+                </tr>
+                <tr>
+                    <td>1/6</td>
+                    <td>16.67%</td>
+                    <td>1⅙</td>
+                </tr>
+                <tr>
+                    <td>1/7</td>
+                    <td>14.29%</td>
+                    <td>1/7</td>
+                </tr>
+                <tr>
+                    <td>1/8</td>
+                    <td>12.5%</td>
+                    <td>1/8</td>
+                </tr>
+                <tr>
+                    <td>1/9</td>
+                    <td>11.11%</td>
+                    <td>1⅑</td>
+                </tr>
+                <tr>
+                    <td>1/10</td>
+                    <td>10%</td>
+                    <td>1/10</td>
+                </tr>
+                <tr>
+                    <td>1/11</td>
+                    <td>9.09%</td>
+                    <td>1/11</td>
+                </tr>
+                <tr>
+                    <td>1/12</td>
+                    <td>8.33%</td>
+                    <td>1/12</td>
+                </tr>
+                <tr>
+                    <td>1/13</td>
+                    <td>7.69%</td>
+                    <td>1/13</td>
+                </tr>
+                <tr>
+                    <td>1/14</td>
+                    <td>7.14%</td>
+                    <td>1/14</td>
+                </tr>
+                <tr>
+                    <td>1/15</td>
+                    <td>6.67%</td>
+                    <td>1/15</td>
+                </tr>
+                <tr>
+                    <td>1/16</td>
+                    <td>6.25%</td>
+                    <td>1/16</td>
+                </tr>
+                <tr>
+                    <td>1/17</td>
+                    <td>5.88%</td>
+                    <td>1/17</td>
+                </tr>
+                <tr>
+                    <td>1/18</td>
+                    <td>5.56%</td>
+                    <td>1/18</td>
+                </tr>
+                <tr>
+                    <td>1/19</td>
+                    <td>5.26%</td>
+                    <td>1/19</td>
+                </tr>
+                <tr>
+                    <td>1/20</td>
+                    <td>5%</td>
+                    <td>1/20</td>
+                </tr>
+                <tr>
+                    <td>1/21</td>
+                    <td>4.76%</td>
+                    <td>1/21</td>
+                </tr>
+                <tr>
+                    <td>1/22</td>
+                    <td>4.55%</td>
+                    <td>1/22</td>
+                </tr>
+                <tr>
+                    <td>1/23</td>
+                    <td>4.35%</td>
+                    <td>1/23</td>
+                </tr>
+                <tr>
+                    <td>1/24</td>
+                    <td>4.17%</td>
+                    <td>1/24</td>
+                </tr>
+                <tr>
+                    <td>1/25</td>
+                    <td>4%</td>
+                    <td>1/25</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+
+
+
+<script>
+  // Toggle table visibility for responsive design
+document.addEventListener('DOMContentLoaded', function() {
+    const toggleButton = document.createElement('button');
+    toggleButton.textContent = 'Toggle Table Visibility';
+    toggleButton.style.margin = '20px';
+    toggleButton.style.padding = '10px';
+  toggleButton.style.borderRadius = '3px';
+    toggleButton.style.backgroundColor = '#FF5733';
+    toggleButton.style.color = 'white';
+    toggleButton.style.border = 'none';
+    toggleButton.style.cursor = 'pointer';
+    toggleButton.style.fontSize = '16px';
+
+    const fractionsSection = document.querySelector('.fractions');
+    fractionsSection.insertBefore(toggleButton, fractionsSection.firstChild);
+
+    const table = document.querySelector('table');
+
+    toggleButton.addEventListener('click', () => {
+        if (table.style.display === 'none' || table.style.display === '') {
+            table.style.display = 'table';
+            toggleButton.textContent = 'Hide Table';
+        } else {
+            table.style.display = 'none';
+            toggleButton.textContent = 'Show Table';
+        }
+    });
+
+    // Initially hide the table on small screens
+    if (window.innerWidth < 768) {
+        table.style.display = 'none';
+    }
+
+    // Adjust table display on resize
+    window.addEventListener('resize', () => {
+        if (window.innerWidth < 768) {
+            table.style.display = 'none';
+            toggleButton.textContent = 'Show Table';
+        } else {
+            table.style.display = 'table';
+            toggleButton.textContent = 'Hide Table';
+        }
+    });
+});
+</script>
+
+
+
+
+
+
