--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 
-
+<title>Fraction to Percentage | Table</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
